--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "react-native-webview": "13.13.5",
     "zod": "^3.25.7",
     "react-native-svg": "15.11.2",
-    "expo-linear-gradient": "~14.1.4"
+    "expo-linear-gradient": "~14.1.4",
+    "expo-sharing": "~13.1.5",
+    "expo-clipboard": "~7.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
