--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "axios": "^1.9.0",
-    "expo": "53.0.11",
+    "expo": "53.0.12",
     "expo-blur": "~14.1.5",
     "expo-clipboard": "~7.1.4",
     "expo-constants": "~17.1.6",
@@ -36,12 +36,12 @@
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.8",
-    "expo-web-browser": "~14.1.6",
+    "expo-system-ui": "~5.0.9",
+    "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.57.0",
-    "react-native": "0.79.3",
+    "react-native": "0.79.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-document-picker": "^9.3.1",
     "react-native-gesture-handler": "~2.24.0",
@@ -51,7 +51,8 @@
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "zod": "^3.25.7"
+    "zod": "^3.25.7",
+    "expo-document-picker": "~13.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
